<resources>
    <string name="app_name">epifier</string>
    <string name="register_header">First of the few steps to set you up with a Bank Account</string>
    <string name="register_pan_header">PAN NUMBER</string>
    <string name="register_birth_header">BIRTHDATE</string>
    <string name="register_no_pan">I don\'t have a PAN</string>
    <string name="register_button_next">NEXT</string>
    <string name="register_disclaimer"><![CDATA[Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <a href=\"https://stackoverflow.com\">Learn more</a>]]></string>
    <string name="onboard_icon_cd">Icon</string>
    <string name="onboard_start_button">Start Onboarding</string>
</resources>